209 - fix spacing between coin boxes

--- a/imports/ui/stylesheets/wallet.less
+++ b/imports/ui/stylesheets/wallet.less
@@ -31,7 +31,7 @@
       height: 185px;
 
       &:not(:last-child) {
-        margin-right: 5px;
+        margin-right: 10px;
       }
 
       a {
